-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0
-
None
-
9140731319269c75f24e80075750971e00844906
QML module API does not support enums. Enums defined in QML module API are not accessible.
It is a rather common use case for QML module APIs is to provide enums. For example, 2 out of 4 example cases in QTBUG-17318 use enums.
import QtMobility.feedback.themeEffect 1.1 as ThemeEffect
Button {
onPressed: ThemeEffect.play(ThemeEffect.Sensitive)
}
import QtQuick.orientation 2.0 as Orientation
Window {
rotation: Orientation.orientation == Orientation.Portrait ? 0 : 90
Behavior on rotation { NumberAnimation { .. } }
}
For Gerrit Dashboard: QTBUG-21033 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
3291,3 | Add enums support to QObject module APIs | master | qt/qtdeclarative | Status: MERGED | +2 | 0 |